--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">TFL Detect</string>
     <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
+    <string name="app_name">ImageCap</string>
+    <string name="readings" />
+    <string name="submit" />
+    <string name="location" />
+    <string name="todo" />
+    <string name="date_of_recording" />
+    <string name="current_units" />
 </resources>
